--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <img src="images/Group 674.svg" alt="">
         </div>
         <div class="cancellation">
-            <img class="cancellation_img" src="/images/Group 673.svg" alt="">
+            <img class="cancellation_img" src="images/Group 673.svg" alt="">
             <div class="cancellation_item">
                 <img src="images/Group 87.svg" alt="">
             </div>
